# tron

./: .cz-config.js  README.md  package.json  pnpm-lock.yaml  prettier.config.js  turbo.json
apps/api/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  main.py  package.json  pyproject.toml  ruff.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 147ea9e263c3_add_knowledge_base_table.py  2e416d54e8ee_token_usage_models.py  338ba237f455_add_user_table.py  3c79618f970e_allow_model_usage_logs_without_.py  501141005151_add_model_usage_log_table.py  7b09102bca31_add_organization_team_and_division_table.py  7c9d8a2440ef_add_files_table.py  8676dc61378a_add_status_for_knowledge_base_and_file.py  918bdd620c98_add_conversation_table.py  ac7768abf755_update_conversation_with_feature_tag_.py  afff5279157b_add_llm_model_table.py  ba449f0d2f98_file_knowledge_base_on_delete.py  e1a5bd756804_add_message_table.py  e40fa49651e4_add_features_table.py  e85cc303b514_private_file_field.py
apps/api/docker/postgres/: init.sql
apps/api/src/: router.py
apps/api/src/celery/: app.py  schema.py  tasks.py  utils.py  worker_context.py
apps/api/src/cli/: manage.py
apps/api/src/cli/seeders/: seeder.py
apps/api/src/cli/users/: users.py
apps/api/src/core/: config.py  db.py  dependencies.py  exception.py  jwt.py  logger.py  security.py  vector_db.py
apps/api/src/core/access_control/: casbin.py  model.conf  types.py  utils.py
apps/api/src/models/: enums.py  mixins.py  models.py  pagination.py  response.py
apps/api/src/utils/: parse.py
(+269 files in other folders)
