[project]
name = "tron-api"
version = "0.1.0"
description = "TRON - API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "casbin>=1.43.0",
    "casbin-sqlalchemy-adapter>=1.4.0",
    "celery[redis,sqlalchemy]>=5.5.3",
    "crawl4ai>=0.7.8",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.121.3",
    "langchain>=1.0.8",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "lxml>=5.4.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "qdrant-client>=1.16.0",
    "sqlalchemy-adapter>=1.9.0",
    "sqlmodel>=0.0.27",
    "typed-settings>=25.2.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = ["flower>=2.0.1", "pyright>=1.1.408", "ruff>=0.14.6"]
